Ajusta caminho dos relatórios no GitHub Actions

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -50,7 +50,7 @@ jobs:
         with:
           name: pactum-reports
           path: |
-            reports/login/html
-            reports/usuarios/html
-            reports/produtos/html
-            reports/html
+            reports/login
+            reports/usuarios
+            reports/produtos
+            reports/
